# pdfgrader

./: .gitignore  LICENSE  README.md
docs/software_requirements/: description.tex  external.tex  features.tex  glossary.tex  introduction.tex  issues.tex  models.tex  nonfunction.tex  srs.tex
docs/vision_and_scope/: background.tex  busness_context.tex  scope_limitations.tex  solution.tex  vision.tex  vision_and_scope.tex
program/: Makefile  Makefile.am  configure.ac  installDependencies.sh  install_tools.sh  maintain.sh  makefile
program/src/main/: ExamImage.vala  Export.vala  Lock.vala  Mark.vala  Question.vala  QuestionSet.vala  Save.vala  System.vala
program/src/test/Save/: saveTest.sh  saveTest.vala
